mailscripts (28-1) UNRELEASED; urgency=medium

  * mailscripts.el:
    - new commands: mailscripts-git-format-patch-{attach,drafts}
    - new DWIM wrapper command: mailscripts-prepare-patch
    - notmuch-extract-{thread,message}-patches: add Gnus support
      notmuch-extract-message-patches{,-to-project} are now aliases for
      mailscripts-extract-message-patches{,-to-project}.
    - rewrite short description and add a brief commentary
    - load the notmuch library only when code that requires it is called
    - move the mailscripts customisation group into the mail group
    - add declarations to fix byte compilation warnings
    - fix usage of cl-case in an internal function.
  * debian/control: update Description: for elpa-mailscripts.
    Use the new short description and commentary from mailscripts.el.

 -- Sean Whitton <spwhitton@spwhitton.name>  Sun, 18 Dec 2022 10:40:55 -0700

mailscripts (27-1) unstable; urgency=medium

  * Update Makefile register-python-argcomplete3 -> register-python-argcomplete
    (Closes: #1013622).

 -- Sean Whitton <spwhitton@spwhitton.name>  Fri, 24 Jun 2022 14:51:22 -0700

mailscripts (26-1) unstable; urgency=medium

  * New script: sendmail-reinject (Closes: #1009617)
    - add default-mta | mail-transport-agent, python3-notmuch to Suggests
    - add Jameson Graef Rollins to d/copyright
    - add an entry to the package description.
    Thanks to Jameson Graef Rollins for the new script.
  * Run wrap-and-sort -abst.

 -- Sean Whitton <spwhitton@spwhitton.name>  Mon, 16 May 2022 17:01:00 -0700

mailscripts (25-1) unstable; urgency=medium

  * notmuch-slurp-debbug:
    - Exit immediately if Mail::Box::Manager::open fails.
    - Support tilde expansion in 'maildir' configuration key.
  * mdmv: ensure destination path ends with ':2,' when message has no flags.
    Previously we were writing some messages with no flags into cur/
    directories without this suffix, which is invalid (see maildir(5)).