@@ -6,6 +6,8 @@ mailscripts (28-1) UNRELEASED; urgency=medium
     - notmuch-extract-{thread,message}-patches: add Gnus support
       notmuch-extract-message-patches{,-to-project} are now aliases for
       mailscripts-extract-message-patches{,-to-project}.
+    - if mailscripts-extract-message-patches identifies no attachments,
+      it now offers to pipe the whole message to 'git am'
     - rewrite short description and add a brief commentary
     - load the notmuch library only when code that requires it is called
     - move the mailscripts customisation group into the mail group
